--- a/swarm/docker-compose.yml
+++ b/swarm/docker-compose.yml
@@ -3,11 +3,27 @@ version: '3'
 services:
     web:
         build: .
-        image: kn3sv1/swarm-example:1.0
+        image: kn3sv1/swarm-example:1.1
         ports:
             - 8030:3000
         networks:
             - mynet
+        deploy:
+            replicas: 6
+            update_config:
+                parallelism: 2
+                delay: 10s
+            restart_policy:
+                condition: on-failure
 
+    visualizer:
+        image: dockersamples/visualizer:stable
+        ports:
+          - "8040:8080"
+        volumes:
+          - "/var/run/docker.sock:/var/run/docker.sock"
+        deploy:
+          placement:
+            constraints: [node.role == manager]
 networks:
     mynet:
